--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Profile</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
